bugfix: fixing navbar button link and button spacing

--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,9 @@ body{
 
 }
 
-
+.navItem {
+    margin-top: 1em;
+  }
 
 .signup{
   margin-top: 60px;
@@ -12,11 +14,6 @@ body{
 .addbudgets{
   margin-top: 100px;
 }
-
-li a:hover:not(.active) {
-  background-color: #111;
-}
-
 
 .add-budget-container {
   padding-top: 30px;
